<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/PartyImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/android_toys_at_a_birthday_party"
        android:scaleType="centerCrop"
        android:src="@drawable/androidparty">

    </ImageView>

    <TextView
        android:id="@+id/HappyBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/happy_birthday"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/nameTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/HappyBirthday"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/nameTo"
        android:textAlignment="gravity"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/From"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fromMyName"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/from"
        android:textAlignment="gravity"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/fromMyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="right"
        android:text="@string/yourName"
        android:textAlignment="gravity"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

</RelativeLayout>